# bert_tunning

./: .dockerignore  .env.macos.example  .env.windows.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  README.md  classifier.py  config.py  dataset.py  extraction.py  logger.py  main.py  pyproject.toml  reporting.py  training.py  wandb_logger.py
.agents/skills/code-smells/: SKILL.md
.agents/skills/design-patterns/: SKILL.md
.agents/skills/optimal-scaffold/: SKILL.md
.agents/skills/pytest-testing/: SKILL.md
.claude/: learnings.md  settings.json
.claude/agents/: code-improver.md
.claude/memory/: MEMORY.md  feedback_run_check_after_edits.md  project_mahalanobis_threshold_status_simplification_deferred.md
.claude/skills/dependency-injection-python/: SKILL.md
.claude/skills/pep8-check/: SKILL.md
.claude/skills/pydantic/: SKILL.md
.claude/skills/python-backend/: SKILL.md
.claude/skills/python-oop/: SKILL.md
.claude/skills/solid-principles/: SKILL.md
.claude/skills/stop-using-none/: SKILL.md
.github/: CODEOWNERS
data/: bert_tunning_cache_100.parquet
docs/superpowers/plans/: 2026-06-27-classiflow-scaffold-migration.md  2026-06-28-training-output-hardening.md  2026-07-04-ood-mahalanobis-detection.md  2026-07-07-knn-ood-detection.md  2026-07-10-mahalanobis-empirical-pvalue.md  2026-07-12-ood-review-remediation.md  2026-07-13-mahalanobis-threshold-status.md  2026-07-13-ood-remediation-followup.md  2026-07-14-tfidf-cosine-ood-signal.md  2026-07-15-ood-metrics-nesting.md
docs/superpowers/specs/: 2026-07-15-ood-metrics-nesting-design.md  2026-07-15-svm-independent-reviewer-design.md  2026-07-16-ood-artifact-schema-versioning-design.md  2026-07-16-ood-scorer-extraction-design.md  2026-07-16-svm-signal-srp-ocp-remediation-design.md  2026-07-16-svm-softmax-disagreement-design.md  2026-07-18-embeddings-batch-consolidation-design.md  2026-07-18-ood-calibration-extract-operation-design.md  2026-07-18-ood-uncalibrated-threshold-visibility-design.md  2026-07-18-svm-training-workflow-consolidation-design.md  2026-07-18-training-pipeline-decomposition-design.md  2026-07-19-react-frontend-design.md  2026-07-20-config-page-model-switch-and-wandb-design.md  2026-07-20-frontend-full-results-table-design.md  2026-07-20-frontend-prediction-progress-design.md  2026-07-20-frontend-timeline-view-design.md  2026-07-20-frontend-visual-redesign-design.md  2026-07-21-docker-image-trim-design.md  2026-07-21-predict-concurrency-limit-design.md  2026-07-22-ocr-reader-concurrency-fix-design.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts
frontend/src/components/: FileUploadForm.tsx  Layout.tsx  PredictionProgress.tsx  PredictionsTable.tsx  ResultDetail.tsx  ResultsTable.tsx
frontend/src/types/: api.ts
frontend/src/utils/: csv.ts  flatten.ts  format.ts
models/bert_tunning_model_beto/final/: config.json  model.safetensors  ood_stats.npz  svm_classifiers.joblib  tokenizer_config.json
models/bert_tunning_model_beto_v2/final/: config.json  model.safetensors  ood_stats.npz  svm_classifiers.joblib
src/: __init__.py  __main__.py  embeddings.py  exceptions.py  logger.py  ood.py  schema.py  settings.py  svm_reviewer.py  wandb.py
src/api/: __init__.py  __main__.py  app.py  schema.py
src/api/routes/: __init__.py  predict.py
src/api/routes/health/: __init__.py  endpoints.py
src/api/routes/predict/: __init__.py  endpoints.py  schemas.py
src/cli/: __init__.py  _ood_common.py  clean.py  ood_calibration.py  ood_stats.py  predict.py  svm_classifiers.py  train.py
src/inference/: __init__.py  classify.py  ood.py  ood_scorer.py  pipeline.py
src/ingestion/: __init__.py  _text.py  cache.py  exceptions.py  extract.py  pipeline.py  scan.py
src/ingestion/extractors/: __init__.py  _base.py  _factory.py  markitdown.py  ocr.py
src/playground/: pca_train_vs_predict.ipynb
src/training/: __init__.py  evaluate.py  options.py  pipeline.py  reporting.py  split.py  tokenize.py  trainer.py  wandb_logger.py
src/training/models/: __init__.py  beto.py  config.py  minilm.py  xlm_roberta.py
tests/: test_ood.py  test_scaffold.py  test_schema.py  test_settings_ood.py  test_svm_reviewer.py  test_wandb.py
tests/api/: test_predict.py
tests/cli/: test_commands.py  test_ood_calibration.py  test_ood_stats.py  test_svm_classifiers.py
tests/inference/: test_ood.py  test_pipeline.py
tests/ingestion/: test_cache.py  test_extract.py  test_ocr.py  test_text.py
tests/training/: test_model_registry.py  test_pipeline.py  test_reporting.py  test_split.py  test_tokenize.py
