[project]
name = "bert-tunning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.40.0",
    "accelerate>=0.29.0",
    "sentencepiece>=0.1.99",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "markitdown[pdf]>=0.1.0",
    "easyocr>=1.7.0",
    "PyMuPDF>=1.24.0",
    "wandb>=0.19.0",
    "plotly>=5.22.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
