[project]
name = "classiflow"
version = "0.1.0"
description = "Spanish municipal document classifier — fine-tunes transformer models on PDF corpora"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.7.1",
    "transformers>=4.46.0",
    "accelerate>=0.29.0",
    "sentencepiece>=0.1.99",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "markitdown[pdf]>=0.1.0",
    "easyocr>=1.7.0",
    "PyMuPDF>=1.24.0",
    "wandb>=0.19.0",
    "plotly>=5.22.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "click>=8.1.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-cov",
    "pre-commit",
    "poethepoet",
    "httpx>=0.27.0",
]

[tool.uv]
package = false
default-groups = ["dev"]

[tool.uv.sources]
torch = { index = "pytorch-cu118" }

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

#########################
# RUFF
#########################

[tool.ruff]
line-length = 100
target-version = "py310"
fix = true

[tool.ruff.lint]
extend-select = ["ALL"]
ignore = [
    "D",       # pydocstyle
    "N",       # variable names
    "CPY",     # copyright notices
    "S101",
    "ISC001",
    "ANN401",
    "COM812",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

#########################
# MyPy
#########################

[tool.mypy]
strict = true
python_version = "3.10"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["torch.*", "transformers.*", "sklearn.*", "wandb.*", "fitz.*", "easyocr.*", "markitdown.*", "plotly.*"]
ignore_missing_imports = true

#########################
# Pytest
#########################

[tool.pytest.ini_options]
addopts = ["-r=A", "-vvv"]
testpaths = ["tests"]
pythonpath = ["."]

#########################
# Poe tasks
#########################

[tool.poe.tasks]
lint       = { shell = "ruff check . && ruff format --check ." }
fmt        = "ruff format ."
typecheck  = "mypy ."
test       = "pytest"
coverage   = { shell = "pytest -v --override-ini=addopts= --log-level=CRITICAL --cov=. --cov-branch --cov-report=html --cov-report=term-missing:skip-covered" }
check      = ["lint", "typecheck", "test"]
precommit  = "uv run pre-commit run --all-files --verbose"
